--- a/Makestagram/Storyboards/Login.storyboard
+++ b/Makestagram/Storyboards/Login.storyboard
@@ -52,14 +52,36 @@
                                     <constraint firstItem="a4z-jM-aj5" firstAttribute="centerX" secondItem="kth-Qi-AMJ" secondAttribute="centerX" id="szJ-jJ-MIH"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sRR-mi-GpT">
+                                <rect key="frame" x="35" y="290" width="305" height="44"/>
+                                <color key="backgroundColor" red="0.2196078431372549" green="0.59215686274509804" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="BZj-uF-P68"/>
+                                    <constraint firstAttribute="width" constant="305" id="iIf-GG-2ae"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                <state key="normal" title="Register or Log In">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginButtonTapped:" destination="Kih-n7-jCs" eventType="touchUpInside" id="2Ko-ML-RjM"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="kth-Qi-AMJ" firstAttribute="top" secondItem="uTC-Up-mtV" secondAttribute="topMargin" id="2wm-bZ-GrV"/>
+                            <constraint firstAttribute="trailing" secondItem="sRR-mi-GpT" secondAttribute="trailing" constant="35" id="4mU-yZ-dyp"/>
                             <constraint firstAttribute="trailing" secondItem="kth-Qi-AMJ" secondAttribute="trailing" id="6JQ-qI-fcg"/>
+                            <constraint firstItem="sRR-mi-GpT" firstAttribute="leading" secondItem="uTC-Up-mtV" secondAttribute="leading" constant="35" id="IEo-Ch-o2Z"/>
+                            <constraint firstItem="anw-9e-QIq" firstAttribute="top" secondItem="sRR-mi-GpT" secondAttribute="bottom" constant="333" id="VkN-21-wAs"/>
+                            <constraint firstItem="sRR-mi-GpT" firstAttribute="top" secondItem="kth-Qi-AMJ" secondAttribute="bottom" constant="25" id="ZI7-Gt-9Lj"/>
                             <constraint firstItem="kth-Qi-AMJ" firstAttribute="leading" secondItem="uTC-Up-mtV" secondAttribute="leading" id="wf4-Tp-Ifn"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loginButton" destination="sRR-mi-GpT" id="xmx-qH-yzq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1En-uQ-Lct" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
