--- a/Makestagram/Storyboards/Login.storyboard
+++ b/Makestagram/Storyboards/Login.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Kih-n7-jCs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="b9z-2Z-pRt">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -79,13 +79,90 @@
                             <constraint firstItem="kth-Qi-AMJ" firstAttribute="leading" secondItem="uTC-Up-mtV" secondAttribute="leading" id="wf4-Tp-Ifn"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="pQO-c4-d8t"/>
                     <connections>
                         <outlet property="loginButton" destination="sRR-mi-GpT" id="xmx-qH-yzq"/>
+                        <segue destination="vpG-yS-J0L" kind="show" identifier="toCreateUsername" id="h1M-qH-62c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1En-uQ-Lct" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="72.799999999999997" y="-211.84407796101951"/>
+            <point key="canvasLocation" x="1012" y="-211.84407796101951"/>
+        </scene>
+        <!--Create Username View Controller-->
+        <scene sceneID="xyp-co-FUf">
+            <objects>
+                <viewController id="vpG-yS-J0L" customClass="CreateUsernameViewController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wUb-RN-qnk"/>
+                        <viewControllerLayoutGuide type="bottom" id="52m-6r-33Q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Qth-0m-iDo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="CY0-Nd-Mdl">
+                                <rect key="frame" x="35" y="65" width="305" height="188"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eX6-m8-qAc">
+                                        <rect key="frame" x="59.5" y="0.0" width="186.5" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a username so your friends can find you." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="350" translatesAutoresizingMaskIntoConstraints="NO" id="6Ew-Pn-v4k">
+                                        <rect key="frame" x="6.5" y="47" width="292" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MYg-OH-cjI">
+                                        <rect key="frame" x="0.0" y="82" width="305" height="44"/>
+                                        <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="zRJ-4k-Wea"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5MT-Jn-g6d">
+                                        <rect key="frame" x="0.0" y="144" width="305" height="44"/>
+                                        <color key="backgroundColor" red="0.38039215686274508" green="0.6588235294117647" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="u2U-JH-TMU"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                        <state key="normal" title="Next"/>
+                                        <connections>
+                                            <action selector="nextButtonTapped:" destination="vpG-yS-J0L" eventType="touchUpInside" id="xk3-bP-pMr"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="6Ew-Pn-v4k" firstAttribute="top" secondItem="eX6-m8-qAc" secondAttribute="bottom" constant="23" id="Ev0-si-GVm"/>
+                                    <constraint firstItem="5MT-Jn-g6d" firstAttribute="leading" secondItem="CY0-Nd-Mdl" secondAttribute="leading" id="POg-T5-FLs"/>
+                                    <constraint firstItem="MYg-OH-cjI" firstAttribute="leading" secondItem="CY0-Nd-Mdl" secondAttribute="leading" id="eFe-Ae-vXW"/>
+                                    <constraint firstAttribute="trailing" secondItem="5MT-Jn-g6d" secondAttribute="trailing" id="kRv-If-T6q"/>
+                                    <constraint firstAttribute="trailing" secondItem="MYg-OH-cjI" secondAttribute="trailing" id="nKc-qz-YDX"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CY0-Nd-Mdl" firstAttribute="leading" secondItem="Qth-0m-iDo" secondAttribute="leading" constant="35" id="c4E-dg-Wtu"/>
+                            <constraint firstAttribute="trailing" secondItem="CY0-Nd-Mdl" secondAttribute="trailing" constant="35" id="geQ-oL-OQm"/>
+                            <constraint firstItem="CY0-Nd-Mdl" firstAttribute="top" secondItem="wUb-RN-qnk" secondAttribute="bottom" constant="45" id="nes-9e-ChI"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="nextButton" destination="5MT-Jn-g6d" id="sVz-kz-BEm"/>
+                        <outlet property="usernameTextField" destination="MYg-OH-cjI" id="2oZ-nt-bKd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WDr-6u-PBf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1784.8" y="-212.74362818590706"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="WK7-dc-o1F">
@@ -103,6 +180,24 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VbT-Hn-ona" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="WAg-D8-dhU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="b9z-2Z-pRt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1tf-zD-jd5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Kih-n7-jCs" kind="relationship" relationship="rootViewController" id="1co-AH-h2T"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1rD-Zs-Os9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="72.799999999999997" y="-211.84407796101951"/>
         </scene>
     </scenes>
 </document>
