--- a/Makestagram/Storyboards/Main.storyboard
+++ b/Makestagram/Storyboards/Main.storyboard
@@ -28,28 +28,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3tK-e4-H6r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-634" y="735"/>
-        </scene>
-        <!--Find Friends View Controller-->
-        <scene sceneID="o9X-Po-BOe">
-            <objects>
-                <viewController id="hFT-Z9-gBM" customClass="FindFriendsViewController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="7CT-VR-pzi"/>
-                        <viewControllerLayoutGuide type="bottom" id="H7P-NY-vw1"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="qeR-Cp-XHF">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" tag="2" title="" image="tab_find_friends_black" id="dqm-Kf-i8t">
-                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Dwt-NO-MOk" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1484" y="736"/>
+            <point key="canvasLocation" x="304.80000000000001" y="734.48275862068976"/>
         </scene>
         <!--Main Tab Bar Controller-->
         <scene sceneID="fFX-2u-hd4">
@@ -63,7 +42,7 @@
                     <connections>
                         <segue destination="6By-7c-RT2" kind="relationship" relationship="viewControllers" id="zCx-KY-OoT"/>
                         <segue destination="mqx-W4-JKU" kind="relationship" relationship="viewControllers" id="lQg-rT-lo4"/>
-                        <segue destination="hFT-Z9-gBM" kind="relationship" relationship="viewControllers" id="r3z-0u-zUI"/>
+                        <segue destination="kVp-9f-7qU" kind="relationship" relationship="viewControllers" id="r3z-0u-zUI"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kTv-hW-Rd6" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -78,11 +57,20 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KGv-hM-y9V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="342" y="735"/>
+            <point key="canvasLocation" x="1280.8" y="734.48275862068976"/>
+        </scene>
+        <!--FindFriends-->
+        <scene sceneID="DdK-if-EJN">
+            <objects>
+                <viewControllerPlaceholder storyboardName="FindFriends" id="kVp-9f-7qU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="G7O-ei-qvo"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kw7-JY-kMD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1484" y="735.38230884557731"/>
         </scene>
     </scenes>
     <resources>
-        <image name="tab_find_friends_black" width="25" height="25"/>
         <image name="tab_plus_black" width="25" height="25"/>
     </resources>
 </document>
